--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,20 @@ spring:
       username: root
       password: 1234
       driver-class-name: com.mysql.cj.jdbc.Driver
+
+---
+
+spring:
+   profiles: test
+   jpa:
+      show-sql: true
+      generate-ddl: true
+      database-platform: org.hibernate.dialect.H2Dialect
+      hibernate:
+         ddl-auto: create-drop
+         
+   datasource:
+      url: jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+      username: sa
+      password: 
+      driver-class-name: org.h2.Driver
