--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,20 @@ sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+//	maven { url 'https://repo.spring.io/libs-milestone'}
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	runtimeOnly 'com.h2database:h2'
+
+	/*compile('org.springframework.cloud:spring-cloud-starter-aws')
+	 handlebars
+	compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0'*/
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -27,3 +33,9 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+/*dependencyManagement {
+	imports {
+		mavenBom 'org.springframework.cloud:spring-cloud-aws:2.0.0.RC2'
+	}
+}*/
