--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,22 @@ spring:
       database-platform: org.hibernate.dialect.MySQL5Dialect
       hibernate:
          ddl-auto: update
+   jackson:
+      property-naming-strategy: SNAKE_CASE
 
    datasource:
       url: jdbc:mysql://localhost:3306/luvket?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=UTF-8&useSSL=false
       username: root
-      password: 1234
       driver-class-name: com.mysql.cj.jdbc.Driver
+      password: 1234
+
+cloud:
+   aws:
+      s3:
+         bucket: luvket
+         region:
+            static: ap-northeast-2
+         stack:
+            auto: false
+         credentials:
+            instanceProfile: true
