--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,26 +12,10 @@ spring:
       database-platform: org.hibernate.dialect.MySQL5Dialect
       hibernate:
          ddl-auto: update
+   jackson:
+      property-naming-strategy: SNAKE_CASE
 
    datasource:
       url: jdbc:mysql://localhost:3306/luvket?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=UTF-8&useSSL=false
       username: root
-      password: 1234
       driver-class-name: com.mysql.cj.jdbc.Driver
-
----
-
-spring:
-   profiles: test
-   jpa:
-      show-sql: true
-      generate-ddl: true
-      database-platform: org.hibernate.dialect.H2Dialect
-      hibernate:
-         ddl-auto: create-drop
-         
-   datasource:
-      url: jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-      username: sa
-      password: 
-      driver-class-name: org.h2.Driver
