[Feature] 초대 수락 api 개발

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,4 +18,5 @@ spring:
    datasource:
       url: jdbc:mysql://localhost:3306/luvket?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=UTF-8&useSSL=false
       username: root
+      password: 1234
       driver-class-name: com.mysql.cj.jdbc.Driver
